<resources>
    <string name="app_name">Yevgeniya_Weather</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature:</string>
    <string name="placeholder">##</string>
    <string name="feels_like">Feels like:</string>
    <string name="wind">Wind:</string>
    <string name="wind_direction">Wind Direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="uv_index">UV Index:</string>
    <string name="visibility">Visibility:</string>
</resources>