<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgResult" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city" />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/condition"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/tv_temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:text="@string/temperature"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_temperature_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition" />

    <TextView
        android:id="@+id/tv_feels_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/feels_like"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature_text" />

    <TextView
        android:id="@+id/tv_feels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_feels_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

    <TextView
        android:id="@+id/tv_wind_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="16dp"
        android:text="@string/wind"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_text" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_wind_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels" />

    <TextView
        android:id="@+id/tv_wind_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/wind_direction"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_text" />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_wind_direction_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

    <TextView
        android:id="@+id/tv_humidity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_direction_text" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_humidity_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_direction" />

    <TextView
        android:id="@+id/tv_uv_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/uv_index"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity_text" />

    <TextView
        android:id="@+id/tv_uv_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_uv_index_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_visibility_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:text="@string/visibility"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_uv_index_text" />

    <TextView
        android:id="@+id/tv_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/tv_visibility_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_uv_index" />

    <ImageView
        android:id="@+id/imgResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clouds" />

</androidx.constraintlayout.widget.ConstraintLayout>